fix: remove horizontal scroll

--- a/index.css
+++ b/index.css
@@ -14,14 +14,13 @@
 }
 
 header {
-    width: 100vw;
     height: 110px;
     background-color: var(--var-PrimaryColor);
 }
 
 .header-container {
     margin: 0 auto;
-    padding: 0 16px;
+    padding: 0 24px;
     display: flex;
     gap: 32px;
     align-items: center;
@@ -77,9 +76,6 @@ header {
 }
 
 .header-navbar {
-    margin-right: 8px;
-    padding: 5px 8px;
-    padding-left: 3px;
     display: flex;
     gap: 40px;
 }
@@ -135,7 +131,7 @@ header {
 
 .container-main {
     margin-right: 35px;
-    width: 890px;
+    width: 66%;
 }
 
 .container__title {
@@ -399,6 +395,7 @@ header {
 .container-main-delivery,
 .container-main-pay,
 .container-main-recipient {
+    width: 100%;
     margin-top: 30px;
     background-color: #fff;
     border-radius: 16px;
@@ -701,7 +698,6 @@ footer {
     z-index: 1;
     margin-top: -24px;
     display: flex;
-    width: 100vw;
     height: 88px;
     background-color: var(--var-PrimaryColor);
 }
